--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "packageManager": "yarn@3.2.1",
   "devDependencies": {
+    "glob": "11.0.0",
     "remark-cli": "^11.0.0",
     "remark-validate-links": "^12.1.0"
   }
