--- a/package.json
+++ b/package.json
@@ -27,7 +27,13 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test:links": "remark src/pages --quiet --frail",
-    "lint": "docker run --rm -e RUN_LOCAL=true --env-file '.github/super-linter.env' -v \"$PWD\":/tmp/lint github/super-linter:slim-v4.10.1"
+    "lint": "docker run --rm -e RUN_LOCAL=true --env-file '.github/super-linter.env' -v \"$PWD\":/tmp/lint github/super-linter:slim-v4.10.1",
+    "buildNavigation": "node buildNavigation.js",
+    "buildRedirections": "node buildRedirections.js",
+    "renameFiles": "node renameFiles.js",
+    "normalizeLinks": "node normalizeLinks.js",
+    "checkLinks": "node check-links.js",
+    "buildSiteWideBanner": "node buildSiteWideBanner.js"
   },
   "remarkConfig": {
     "plugins": [
@@ -36,6 +42,7 @@
   },
   "packageManager": "yarn@3.2.1",
   "devDependencies": {
+    "glob": "11.0.0",
     "remark-cli": "^11.0.0",
     "remark-validate-links": "^12.1.0"
   }
